<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AddNewAddress">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/full_name"
            android:inputType="text|textCapSentences|textCapWords"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/user_phnNo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:maxLength="10"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/pin_code"
            android:maxLength="6"
            android:inputType="number"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/address1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/flat_house_no_building_company_apartment"
            android:inputType="text|textCapWords"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/landmark_e_g_near_apollo_hospital"
            android:inputType="text|textCapWords"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/city_town"
            android:inputType="text|textCapWords"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/address_edittext"
            android:hint="@string/state"
            android:inputType="text|textCapWords"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff"
            android:textColorHint="#D8C2C2"
            android:textSize="14sp" />


        <Button
            android:id="@+id/saveAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:backgroundTint="#3C6808"
            android:text="@string/save_address"
            android:fontFamily="@font/brawler"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>