<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    tools:context=".OtpVerification">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="45dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:elevation="5dp"
    app:cardElevation="8dp"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/brawler"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/activation_msg"
        android:textColor="#333030"
        android:textSize="16sp" />
        <TextView
            android:id="@+id/phn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="+919678532290"
            android:layout_gravity="center"
            android:fontFamily="@font/brawler"
            android:gravity="center"
            android:textColor="#333030"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="12dp"
            android:background="#191818" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:text="@string/otp"
            android:textSize="16sp"
            android:textColor="#333030" />

        <LinearLayout
            android:id="@+id/root_otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/otp_edit_box1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="30sp"
                android:background="@drawable/edittext_curve_bg"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/otp_edit_box2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="30sp"
                android:inputType="number"
                android:maxLength="1"
                android:background="@drawable/edittext_curve_bg"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/otp_edit_box3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="30sp"
                android:inputType="number"
                android:maxLength="1"
                android:background="@drawable/edittext_curve_bg"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/otp_edit_box4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:background="@drawable/edittext_curve_bg" />


        </LinearLayout>

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/design_default_color_primary_dark"
            android:fontFamily="@font/brawler"
            android:text="@string/done"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/brawler"
        android:textColor="#ffffff"
        />

</LinearLayout>